# CortexXDR-IoC-Uploader

./: .gitignore  LICENSE  README.md  envExample.md  pyproject.toml
examples/: csv_example.csv  file_ops_classified.csv  file_ops_example.csv  tenants.json.example
scripts/: auth_test_script.py
src/xdr_ioc_uploader/: api_client.py  cli.py  config.py  csv_io.py  file_ops.py  models.py  multi_tenant_config.py  multi_tenant_uploader.py  rate_limiter.py  reporting.py  transformers.py  uploader.py
